# standard-ellipse-detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: compute.h  cvcannyapi.h  defines.h  detect.h  types.hpp  unitily.h
src/: compute.cpp  cvcannyapi.cpp  detect.cpp  lsd.cpp  unitily.cpp
test/: CMakeLists.txt  testdetect.cpp  testgroup.cpp  testinital.cpp  testlsd.cpp  testtype.cpp
